--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
+    "dotenv": "^16.0.3",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
