--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron .",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -18,9 +18,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.0",
     "dotenv": "^16.0.3",
     "electron-squirrel-startup": "^1.0.0"
   },
@@ -30,6 +27,7 @@
     "@electron-forge/maker-rpm": "^6.1.1",
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
-    "electron": "24.1.0"
+    "electron": "24.1.0",
+    "electron-debug": "^3.2.0"
   }
 }
